app/assets/stylesheets/navbar.css
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 59px;
  padding: 18px 20px;
  background-color: #e5dccf;
  border-bottom: 2px solid #243e2e;
  column-gap: 5px;
  width: 100%;
}

#logo-container {
  display: flex;
  align-items: center;
}

#logo {
  font-size: 20px;
  font-family: "Clash Display Variable", sans-serif;
  height: 25px;
  font-weight: 500;
  line-height: 25px;
  text-decoration: none;
  color: #243e2e;
  min-width: 125px;
}

#beta {
  border: 1px solid #a94c2e;
  padding: 4px 9px 3px 9px;
  color: #a94c2e;
  margin-left: 5px;
}

#burger {
  height: 23px;
  width: 38px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: none;
  border: none;
  z-index: 999;
}

#burger span {
  background: #243e2e;
  width: 38px;
  height: 2px;
  display: block;
}

#burger.active {
  position: fixed;
  right: 20px;
}

#burger.active span:nth-child(1) {
  transform: translateY(15px) rotate(45deg);
}

#burger.active span:nth-child(2) {
  opacity: 0;
}

#burger.active span:nth-child(3) {
  transform: translateY(-6px) rotate(-45deg);
}

#search-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 100%;
}

#search-wrapper {
  display: none;
  border-bottom: 1px solid black;
  background-color: transparent;
  background-color: #e5dccf;
}

#search-form {
  display: flex;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
}

#search-field {
  background-color: transparent;
  width: 100%;
  border: none;
}

#search-field:focus {
  outline: none;
}

#search-results {
  border-top: 1px solid #243e2e;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.search-results-link-container {
  height: auto;
  border: 0.5px solid #243e2e;
  width: 100%;
}

.search-results-link {
  padding: 15px 20px 15px 20px;
  text-decoration: none;
  color: #243e2e;
  display: block;
}

#search-icon {
  height: 29.33333396911621px;
  width: 24px;
}

.extend {
  z-index: 999;
  display: block !important;
  position: absolute;
  top: 61px;
  left: 2px;
  right: 2px;
  width: calc(100% - 4px);
}

nav {
  display: flex;
}

#nav-menu {
  display: none;
}

#nav-menu.active {
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 2px solid #243e2e;
  background-color: #e5dccf;
  z-index: 999;
  padding-top: 90px;
  padding-bottom: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  list-style-type: none;
}

#nav-menu a {
  text-decoration: none;
  font-size: 20px;
  font-weight: 400;
  line-height: 25px;
  display: flex;
  align-items: center;
}

#add-place-link {
  color: #243e2e;
}

#nav-menu .session-links {
  height: 60px;
  width: 184px;
  color: #e5dccf;
  background-color: #a94c2e;
  font-size: 20px;
  font-weight: 400;
  line-height: 25px;
  border: 2px solid #262626;
  justify-content: space-between;
  padding: 17.5px 30px;
}

#nav-menu.hidden {
  display: none;
}

.hidden {
  display: none;
}

@media (min-width: 1024px) {
  a {
    font-size: 20px;
  }

  header {
    padding: 0 0 0 50px;
    height: 70px;
  }

  #search-container {
    justify-content: center;
    flex-direction: row-reverse;
  }

  #search-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 400px;
    border: none;
    position: relative;
    padding-left: 10px;
  }

  #search-form {
    height: 100%;
    padding: 0;
  }

  #search-field {
    height: 50px;
    padding-top: 15px;
    font-size: 20px;
    color: #243e2e;
  }

  #search-field::placeholder {
    color: #243e2e;
    opacity: 0.8;
  }

  .search-results-link-container {
    border-top: 1px solid #243e2e;
    border-left: 1px solid #243e2e;
    border-right: 1px solid #243e2e;
    border-bottom: none;
  }

  .search-results-link-container:last-of-type {
    border-bottom: 1px solid #243e2e;
  }

  #search-results {
    z-index: 999;
    position: absolute;
    top: 45px;
    left: 0;
    padding: 0;
    background-color: #e5dccf;
    border: none;
  }

  .search-results-link {
    padding-left: 10px;
    border: none;
  }

  #burger {
    display: none;
  }

  #nav-menu {
    display: flex;
    list-style-type: none;
  }

  #nav-menu .session-links {
    height: 68px;
    border-top: none;
    border-right: none;
    border-bottom: none;
  }

  #add-place-link {
    height: 68px;
    width: 175px;

    /* width: 184px; */
    justify-content: space-between;
    padding: 17.5px 30px;

  }
}

